<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_btn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_bottom_btn_click"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="6dp">

        <ImageView
            android:id="@+id/img_btn_1"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:src="@mipmap/icon_4" />

        <TextView
            android:id="@+id/txt_btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ess_remark"
            android:textColor="@color/text_title_color"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_bottom_btn_click"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="6dp">

        <ImageView
            android:id="@+id/img_btn_2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:src="@mipmap/icon_4" />

        <TextView
            android:id="@+id/txt_btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ess_audio"
            android:textColor="@color/text_title_color"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_bottom_btn_click"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="6dp">

        <ImageView
            android:id="@+id/img_btn_3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:src="@mipmap/icon_4" />

        <TextView
            android:id="@+id/txt_btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ess_video"
            android:textColor="@color/text_title_color"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_bottom_btn_click"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="6dp">

        <ImageView
            android:id="@+id/img_btn_4"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:src="@mipmap/icon_4" />

        <TextView
            android:id="@+id/txt_btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ess_image"
            android:textColor="@color/text_title_color"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_bottom_btn_click"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="6dp">

        <ImageView
            android:id="@+id/img_btn_5"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:src="@mipmap/icon_4" />

        <TextView
            android:id="@+id/txt_btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ess_history"
            android:textColor="@color/text_title_color"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
