<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ess_geographical_position"
                    android:textColor="@color/text_title_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="15dp"
                    android:textColor="@color/text_title_color"
                    android:textColorHint="@color/update_tel_sms"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/txt_object_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ess_object_name"
                    android:textColor="@color/text_title_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_object_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="15dp"
                    android:textColor="@color/text_title_color"
                    android:textColorHint="@color/update_tel_sms"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/txt_object_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ess_object_num"
                    android:textColor="@color/text_title_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_object_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="15dp"
                    android:textColor="@color/text_title_color"
                    android:textColorHint="@color/update_tel_sms"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/txt_component_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ess_component_name"
                    android:textColor="@color/text_title_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_component_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="15dp"
                    android:textColor="@color/text_title_color"
                    android:textColorHint="@color/update_tel_sms"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/txt_component_num1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ess_component1_num"
                    android:textColor="@color/text_title_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_component_num1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="15dp"
                    android:textColor="@color/text_title_color"
                    android:textColorHint="@color/update_tel_sms"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/txt_component_num2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ess_component2_num"
                    android:textColor="@color/text_title_color"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_component_num2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="15dp"
                    android:textColor="@color/text_title_color"
                    android:textColorHint="@color/update_tel_sms"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_gray" />

            <TextView
                android:id="@+id/txt_btn_sure"
                style="@style/base_footer_txt_btn"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/ess_btn_sure" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
