<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner_task_step"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ess_ip_address"
                android:textColor="@color/text_title_color"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_ip"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textVisiblePassword"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/text_title_color"
                    android:textSize="14sp" />

                <View
                    android:layout_width="180dp"
                    android:layout_height="1dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/border_line" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:paddingLeft="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ess_port"
                android:textColor="@color/text_title_color"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_port"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="number"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textColor="@color/text_title_color"
                    android:textSize="14sp" />

                <View
                    android:layout_width="180dp"
                    android:layout_height="1dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/border_line" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#F9F9F9"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/ess_btn_cancel"
                android:textColor="#979797"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_btn_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/app_theme_color"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/ess_btn_sure"
                android:textColor="@color/text_white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
